--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <p> This is my new feratures</p>
+    <button>Click me</button>
+    <p>Hai we are making new feature</p>
 </body>
 </html>
